chore(vscode): Add compound launch configuration
This commit adds a new compound launch configuration to the `.vscode/launch.json` file. The compound is named "Compound" and includes two configurations: "Python Debugger (Uvicorn): uvicorn src.backend.main:app --reload" and "Python Debugger (Streamlit): streamlit run src/frontend/main.py". This allows for launching both the backend and frontend of the application simultaneously in VS Code.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,5 +24,11 @@
                 "src/frontend/main.py",
             ],
         }
+    ],
+    "compounds": [
+        {
+            "name": "Compound",
+            "configurations": ["Python Debugger (Uvicorn): uvicorn src.backend.main:app --reload", "Python Debugger (Streamlit): streamlit run src/frontend/main.py"]
+        }
     ]
 }
